--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ GIT_BRANCH_MAIN = main
 GIT_REPO_OWNER = CypressPhoenix
 GIT_REPO_NAME = test_front
 CONNECTION_ARN = arn:aws:codestar-connections:eu-central-1:592699102634:connection/69345448-854c-469e-896f-6880045a6a19
+REGION = eu-west-1
