update infra front

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 GIT_REPO_OWNER_OVRS = Oversecured-traine
 GIT_REPO_NAME_FRONT_OVRS = ovsrd-trainee-front
-CONNECTION_ARN_OVRS = arn:aws:codestar-connections:eu-north-1:592699102634:connection/1810dca9-5df5-41e4-8885-59f5bd6de8b0
+CONNECTION_ARN_OVRS = arn:aws:codestar-connections:eu-west-1:666398651410:connection/fb84dbb9-6978-43f9-804c-50b0d11cf4fc
 GIT_BRANCH_DEV = dev
 GIT_BRANCH_MAIN = main
 GIT_REPO_OWNER = CypressPhoenix
