--- a/.env
+++ b/.env
@@ -5,5 +5,7 @@ GIT_BRANCH_DEV = dev
 GIT_BRANCH_MAIN = main
 GIT_REPO_OWNER = CypressPhoenix
 GIT_REPO_NAME = test_front
-CONNECTION_ARN = arn:aws:codestar-connections:eu-central-1:592699102634:connection/69345448-854c-469e-896f-6880045a6a19
+CONNECTION_ARN = arn:aws
+:codestar-connections:eu-central-1:592699102634:connection/69345448-854c-469e-896f-6880045a6a19
+REGION_HOME = eu-central-1
 REGION = eu-west-1
